src/style/_custom.scss
/* ... */
// .in-view + .in-view {
//   background: #fff;
// }

section {
  grid-column: 2 / -2;

  display: grid;
  grid: auto / repeat(auto-fit, minmax(min(100%, 400px), 1fr));
  grid-auto-flow: dense;
  /*place-content: start;*/
  gap: var(--space-5) var(--space-6);

  position: relative;
  padding: var(--space-6);
  // background: hsl(258 50% 95%);
  // background: hsl(265 30% 95%);n
  // background: var(--ui-surface);
  background: #fff;
  border-radius: var(--bdrs-l);
  transition: filter 0.2s;

  & > * {
    filter: var(--filter, grayscale(0.8));
    transition: filter 0.2s;
  }

  &::before,
  &::after {
    content: "";
    position: absolute;
    z-index: -1;
    width: calc(100% - 1rem);
    display: block;
    top: 0;
    left: 0;
    border-radius: calc(var(--bdrs-md) * 2);
    opacity: var(--pseudo-opacity, 0.2);
    filter: blur(25px);
    transition: 0.3s opacity;
    // mix-blend-mode: color-dodge;
    --purple-200: #5000ca;
  }

  &::before {
    background: var(--purple-200);
    margin: -0.5rem 0.5rem;
    height: calc(100% + 1rem);
    transform: skewY(1deg);
  }
  &::after {
    background: var(--pink-400);
    margin: -0.25rem 0.5rem;
    height: calc(100% + 0.25rem);
    transform: skewY(-1deg);
  }
  &:nth-of-type(even)::before {
    background: var(--pink-400);
  }
  &:nth-of-type(even)::after {
    background: var(--purple-200);
  }
}

/* section header, */
section :is(.small-label, .exercise-details) {
  grid-column: 1 / -1;
}

.small-label {
  text-transform: uppercase;
  font-weight: 800;
  font-size: 0.8em;
  color: var(--ui-accent);
  letter-spacing: 1px;
  display: flex;
  align-items: center;
  align-self: start;
  // box-shadow: 0 5px 2.5px hsl(200deg 95% 3% / 4%),
  //   0 12px 6.5px hsl(200deg 95% 3% / 5%), 0 22.5px 13px hsl(200deg 95% 3% / 7%),
  //   0 40.2px 24px hsl(200deg 95% 3% / 8%), 0 75.2px 44px hsl(200deg 95% 3% / 9%),
  //   0 180px 80px hsl(200deg 95% 3% / 13%);
  box-shadow: 0px 5px 10px 2px rgb(11 47 106 / 7%);
  inline-size: max-content;

  margin-block-start: calc(-1 * var(--space-7));
  background: #fff;
  border-radius: var(--bdrs-md);
  border: 0.125rem solid #2c203b;
  isolation: isolate;
  overflow: hidden;
  transition: 0.3s transform;

  @media (max-width: 895px) {
    margin-block-end: var(--space-5);
    margin-block-start: calc(-1 * var(--space-8));
  }

  a:any-link {
    position: relative;
    color: var(--ui-accent);
    background: #fff;
    text-decoration: none;
    padding: var(--space-1) var(--space-5);
    transition: transform 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);

    &:hover {
      transform: translateX(0.5rem);
    }
    &::before {
      content: "";
      // color: var(--violet-500);
      color: var(--blue-500);
      position: absolute;
      font-size: 1rem;
      top: 50%;
      left: 0;
      inline-size: 1rem;
      block-size: 1rem;
      background: url("data:image/svg+xml,%3Csvg fill='none' stroke='%2355718d' viewBox='0 0 24 24' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke-linecap='round' stroke-linejoin='round' stroke-width='3' d='M13.828 10.172a4 4 0 00-5.656 0l-4 4a4 4 0 105.656 5.656l1.102-1.101m-.758-4.899a4 4 0 005.656 0l4-4a4 4 0 00-5.656-5.656l-1.1 1.1'%3E%3C/path%3E%3C/svg%3E")
        50% / contain no-repeat;
      transform: translate(50%, -50%) scale(2);
      opacity: 0;
      transition: 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
    }

    &:hover::before {
      opacity: 1;
      transform: translate(-0.1rem, -50%) scale(1);
    }
  }
}

.small-label::before {
  content: none;
  block-size: 2px;
  inline-size: 1.5rem;
  background: var(--ui-accent);
  background: currentColor;
}

/* .small-label::after {
  content: counter(task);
} */

section .exercise-details {
  display: inherit;
  /* grid-template-columns: inherit; */
  grid-template-columns: repeat(auto-fit, minmax(min(100%, 400px), 1fr));
  // gap: inherit;
  gap: var(--space-3) var(--space-6);
  margin-block-start: calc(-1 * var(--space-5));
}

section .exercise-details img {
  /* align-self: end; */
}

.exercise-content {
  @media (max-width: 895px) {
    // order: -1;
  }
}

.exercise-content > p + * {
  margin-block-start: var(--space-5);
}

section .hints {
  // display: grid;
  // gap: 0.5ex;

  display: flex;
  flex-wrap: wrap;

  padding: var(--space-1) var(--space-4);
  margin-block-start: var(--space-2);
  border-radius: var(--bdrs-md);
  // border: 2px solid hsl(153 30% 80%);
  // padding-inline-start: var(--space-4);
  // display: inline-grid;
  font-family: "Wotfard";
  font-weight: 300;

  overflow: hidden;
  padding: 2.5px;

  padding: calc(var(--space-3) + 3px) calc(var(--space-3) + 5px);
  background: #e9eef4;
  border-radius: var(--bdrs-l);
  margin-block-start: calc(var(--space-3) * -1);
}

.exercise-content {
  grid-row: span 2;
}

.exercise-content details {
  // position: relative;
  // border: 2px solid hsl(264deg 40% 85%);
  // border: 2px solid transparent;
  // background: linear-gradient(hsl(257 54% 95%), hsl(257 54% 95%)) padding-box,
  //   linear-gradient(to bottom right, #d6c9e8, 60%, #d6c9e800 90%) border-box;
  display: inline-grid;
  // border-radius: var(--bdrs-md);
}

.exercise-content details[open] summary {
  border-radius: var(--bdrs-l) var(--bdrs-l) 0 0;
  // border-block-end: 2px solid hsl(154 29% 90%);
  // width: auto;
  // border-radius: var(--bdrs-sm) var(--bdrs-sm) 0 0;
  svg {
    transform: rotate3d(0, 0, 1, -180deg);
  }
}
/* ... */

